<resources>
    <string name="app_name">Exam Scheduler Cbitss</string>
    <string name="enter_registered_email_id">Enter Registered email Id</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Megha Rawat</string>
    <string name="nav_header_subtitle">rawatmeghna88@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">About Us</string>
    <string name="menu_status">Status</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_qr_code">QR Code</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_main">Exam Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_new">NewActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinner_item">
        <item> SELECT</item>
        <item> One</item>
        <item> Two</item>
        <item> Three</item>
        <item> Four</item>
    </string-array>

</resources>